--- a/IELTS/Simon口语/笔记.md
+++ b/IELTS/Simon口语/笔记.md
@@ -287,3 +287,26 @@ overall:
 part 1 -- fluency
 part 2 -- vocabulary
 part 3 -- structure
+
+
+
+=================================================
+Describe someone you konw who does something well.
+You should say
+    who this person is
+    how you konw this person
+    what they do well
+and explain why you think this person is so good at doing this.
+
+(a person--who)
+I'm going to describe my wife. She works as a secretary in a Chinese company and she plays table tennis very well as a hobby. She is not really tall, about a head below me, and she is at the same age with me. She is always with a humble and smiling face whenever you see her. But she really cheers me up when I'm feeling down.
+(where/when/how)
+I was interested in playing table tennis when I was at college, so I met her at the club. It was really a impressive day and I saw a little girl wearing a pair of shoes with the same style but different colors, one is red and the other is blue. What's more, she plays the game quite well, I mean better than most of the boys. So I was really attracted by her. I found her number on the name list, and messaged her out for dinner later that day. We had a pleasent conversation, and now she becomes my wife.
+(why)
+She is famous because of her talent on table tennis. She get almost all the champins on the competion held in our small town, of course in the women's group. A lot of people see her success when she stands at the highest position of the podium, but I see how hard her training is. She keeps training for at least one hour every day. Once I asked her if she felt bord with endless training, she just answered: I regard it as my hobby, as computer games to you, I just feel happy with it. 
+She is repectful because she, as a volunter, helps the teenagers to play well. She likes to go to the local clubs in my town and gives some tips or training to the young players, some of them have got nice grades in the competion. and more and more teengers are enrolled in this game not to be professional but for health.
+(a place--where)
+I'm going to describe the longest river in China which is called ChangJiang. I'm not sure how long it is, but it must be thounds of kilometers. It start from the westest province in China, where there are a lot of high mountains coverd by snow all the year. So when the snow melt, it becomes the water into that river. And the river ends at the eastest part of China and flows into the East Sea, which is the edge of the Pacific Ocean.
+People living along the river get water for farming, for irrigation, and for their daily life. But sometimes the river brings flood. When flood happens, it can cost thousands of lives. The river just flows through my city in China, which is Nanjing. Half a century ago, the government build a bridge on it, to connect the two pars of the city, it was the longest bridge in the world at that time. After more than 50 years of serving, it is now being repaired and will be open again in three or four years. Along the river in my city, that's full of commercial areas with landscape, skyscraper and attractions for tourism. I like a restaurant best there, which is located on the top floor of a high building beside the river. The point is the restaurant is a turning one. So dinning there, especially when dusk comes, the picture of sky, the river, the lights of the buildings surrounded, of the cars, can be really impressive.
+The restaurant is called YunZhong XiaoYa, which means a relaxible place inside the clouds. It is located on the top floor of a high building, which is 32 or 33. From there, you can almost see the whole city. It is very hard to book a dinner there because it is really welcomed by the tourists as well as the local residents. I've been there twice with my wife, and at the second time I proposed to her right there. 
+(an event)
