--- a/Python/postman/使用总结.md
+++ b/Python/postman/使用总结.md
@@ -81,3 +81,8 @@ utils.genParamsOnline(pay_code, offset);  // 方法名+传递参数
 pm.environment.set("name", "value")  // 设置变量
 var variable = pm.environment.get("name")  // 读取变量
 ```
+
+### 六、调试技巧
+1. postman自带console，和chrome的F12一样，在View--Developer--Show DevTools，脚本中间可插入console.log()方法，输出变量的值，进行比对。
+2. 配合接口文档，实际抓包来确认参数值
+3. 有时候需要fiddler之类抓包工具辅助检查
