--- a/Python/postman/使用总结.md
+++ b/Python/postman/使用总结.md
@@ -86,3 +86,4 @@ var variable = pm.environment.get("name")  // 读取变量
 1. postman自带console，和chrome的F12一样，在View--Developer--Show DevTools，脚本中间可插入console.log()方法，输出变量的值，进行比对。
 2. 配合接口文档，实际抓包来确认参数值
 3. 有时候需要fiddler之类抓包工具辅助检查
+4. 查看接口模块的输出日志，可以辅助定位问题
