--- a/Python/postman/使用总结.md
+++ b/Python/postman/使用总结.md
@@ -14,6 +14,14 @@ request     -- 请求
 2. 环境变量可以保存和导出，这里可以方便设置一些静态值，如url等
 3. 在test中也可以设置变量，作为后续用例的预置条件
 4. 可以预设headers，在Headers--Presets--Manage Presets，同一个网站，可能需要共同的header设置。
+5. 对于包含变量的url有两种处理方式
+```
+如url中gameType为变量 /api/game{gameType}/load
+方法一：{{url}}/api/game/:gameType/load
+此时会自动在参数列表中添加gameType参数
+方法二：{{url}}/api/game/{{gameType}}/load
+此时需要在pre-script中手动设置变量的值到环境变量
+```
 
 
 ### 三、检查点
@@ -87,3 +95,7 @@ var variable = pm.environment.get("name")  // 读取变量
 2. 配合接口文档，实际抓包来确认参数值
 3. 有时候需要fiddler之类抓包工具辅助检查
 4. 查看接口模块的输出日志，可以辅助定位问题
+
+### 七、批量执行
+1. 最常用的批量执行方法为：runner--选择目录和环境变量--run
+2. 可以为用例和folder设置description，然后用高级搜索功能，搜出一组request，然后open in builder，这种方法可达到跨目录批量执行有相同标记的用例的效果
